added index entries to clustering,inference

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -35,7 +35,7 @@ By the end of the chapter, readers will be able to:
 * Describe the advantages, limitations and assumptions of the K-means clustering algorithm.
 
 ## Clustering
-Clustering is a data analysis task involving separating a data set into
+Clustering \index{clustering} is a data analysis task involving separating a data set into
 subgroups of related data. For example, we might use clustering to separate a
 data set of documents into groups that correspond to topics, a data set of
 human genetic information into groups that correspond to ancestral
@@ -46,10 +46,11 @@ predictive modelling exercise. In this course, clustering will be used only for
 exploratory analysis, i.e., uncovering patterns in the data.  
 
 Note that clustering is a fundamentally different kind of task than classification or
-regression. In particular, both classification and regression are *supervised tasks* where 
+regression. In particular, both classification and regression are *supervised tasks* 
+\index{classification}\index{regression}\index{supervised} where 
 there is a *predictive target* (a class label or value), and we
 have examples of past data with labels/values that help us predict those of
-future data. By contrast, clustering is an *unsupervised task*, as we are
+future data. By contrast, clustering is an *unsupervised task*, \index{unsupervised} as we are
 trying to understand and examine the structure of data without any labels to
 help us. This approach has both advantages and disadvantages. Clustering
 requires no additional annotation or input on the data. For example, it would
@@ -64,7 +65,7 @@ choice for evaluation. In this book, we will use visualization to ascertain the
 quality of a clustering, and leave rigorous evaluation for more advanced
 courses.  
 
-> There are also so-called *semisupervised* tasks, where only some of the data
+> There are also so-called *semisupervised* tasks, \index{semisupervised} where only some of the data
 > come with labels/annotations, but the vast majority don't. The goal
 > is to try to uncover underlying structure in the data that allows one to
 > guess the missing labels. This sort of task is beneficial, for example, when one 
@@ -75,7 +76,7 @@ courses.
 **An illustrative example** 
 
 
-Here we will present an illustrative example using a data set from the
+Here we will present an illustrative example using a data set \index{Palmer penguins} from the
 [{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was
 collected by [Dr. Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail/kristen-gorman.php) and
 the [Palmer Station, Antarctica LTER](https://lternet.edu/) and includes
@@ -89,7 +90,7 @@ way.
 knitr::include_graphics("img/gentoo.jpg")
 ```
 
-Below we will work with `penguin_data`, a subset of 18 observations of the original data, which has already been scaled. We will discuss scaling for K-means in more detail later in this chapter.  
+Below we will work with `penguin_data`, a subset of 18 observations of the original data, which has already been scaled. We will discuss scaling for K-means in more detail later in this chapter. \index{mutate}\index{read function!read\_csv} 
 ```{r 10-toy-example-data, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
 
@@ -113,13 +114,13 @@ base <- ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
 base
 ```
 
-Based on the visualization in Figure \@ref(fig:10-toy-example-plot), we might
+Based \index{ggplot}\index{ggplot!geom\_point} on the visualization in Figure \@ref(fig:10-toy-example-plot), we might
 suspect there are a few subtypes of penguins, selected from combinations of
 high/low flipper length and high/low bill length. How do we find this grouping
 automatically, and how do we pick the number of subtypes? The way to rigorously
 separate the data into groups is to use a clustering algorithm.
-In this chapter, we will focus on the *K-means* algorithm, a widely-used
-and often very effective clustering method, combined with the *elbow method* for
+In this chapter, we will focus on the *K-means* algorithm, \index{K-means} a widely-used
+and often very effective clustering method, combined with the *elbow method* \index{elbow method} for
 selecting the number of clusters. This procedure will separate the data into 
 the following groups denoted by colour:
 
@@ -170,6 +171,7 @@ improves it by making adjustments to the assignment of data
 to clusters until it cannot improve any further. But how do we measure
 the "quality" of a clustering, and what does it mean to improve it? 
 In K-means clustering, we measure the quality of a cluster by its
+\index{within-cluster sum-of-squared-distances|see{WSSD}}\index{WSSD}
 *within-cluster sum-of-squared-distances* (WSSD). Computing this involves two steps.
 First, we find the cluster centers by computing the mean of each variable 
 over data points in the cluster. For example, suppose we have a 
@@ -199,7 +201,7 @@ base <- ggplot(clus1) +
 base
 ```
 
-The second step in computing the WSSD is to add up the squared distance between each point in the cluster and the cluster center.
+The second step in computing the WSSD is to add up the squared distance \index{distance!K-means} between each point in the cluster and the cluster center.
 We use the straight-line / Euclidean distance formula that we learned about in the classification chapter.
 In the `r nrow(clus1)`-observation cluster example above, we would compute the WSSD $S^2$ via
 
@@ -231,9 +233,9 @@ Note, however, that "large" is relative to *both* the scale of the variables for
 
 ### The clustering algorithm
 
-We begin the K-means algorithm by picking K, and uniformly randomly assigning data to the K clusters. 
+We begin the K-means \index{K-means!algorithm} algorithm by picking K, and uniformly randomly assigning data to the K clusters. 
 Then K-means consists of two major steps that attempt to minimize the
-sum of WSSDs over all the clusters, i.e. the *total WSSD*:
+sum of WSSDs over all the clusters, i.e. the \index{WSSD!total} *total WSSD*:
 
 1. **Center update:** Compute the center of each cluster.
 2. **Label update:** Reassign each data point to the cluster with the nearest center.
@@ -307,7 +309,7 @@ Note that at this point, we can terminate the algorithm since none of the assign
 in the fourth iteration; both the centers and labels will remain the same from this point onward.
 
 > Is K-means *guaranteed* to stop at some point, or could it iterate forever? As it turns out,
-> thankfully, the answer is that K-means is guaranteed to stop after *some* number of iterations. For the interested reader, the
+> thankfully, the answer is that K-means \index{K-means!termination} is guaranteed to stop after *some* number of iterations. For the interested reader, the
 > logic for this has three steps: (1) both the label update and the center update decrease total WSSD in each iteration,
 > (2) the total WSSD is always greater than or equal to 0, and (3) there are only a finite number of possible
 > ways to assign the data to clusters. So at some point, the total WSSD must stop decreasing, which means none of the assignments
@@ -315,7 +317,7 @@ in the fourth iteration; both the centers and labels will remain the same from t
 
 ### Random restarts
 
-Unlike the classification and regression models we studied in previous chapters, K-means can get "stuck" in a bad solution.
+Unlike the classification and regression models we studied in previous chapters, K-means \index{K-means!restart,nstart} can get "stuck" in a bad solution.
 For example, if we were unlucky and initialized K-means with the following labels:
 <center>
 ```{r 10-toy-kmeans-bad-init, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
@@ -430,7 +432,7 @@ If we set K less than 3, then the clustering merges separate groups of data; thi
 total WSSD, since the cluster center (denoted by an "x") is not close to any of the data in the cluster. On 
 the other hand, if we set K greater than 3, the clustering subdivides subgroups of data; this does indeed still 
 decrease the total WSSD, but by only a *diminishing amount*. If we plot the total WSSD versus the number of 
-clusters, we see that the decrease in total WSSD levels off (or forms an "elbow shape") when we reach roughly 
+clusters, we see that the decrease in total WSSD levels off (or forms an "elbow shape") \index{elbow method} when we reach roughly 
 the right number of clusters.
 <center>
 ```{r 10-toy-kmeans-elbow, echo = FALSE, warning = FALSE, fig.height = 6, fig.width = 10, fig.cap = "Total WSSD for # clusters ranging from 1 to 9."}
@@ -455,7 +457,7 @@ each other. Therefore, the *scale* of each of the variables in the data
 will influence which cluster data points end up being assigned.
 Variables with a large scale will have a much larger 
 effect on deciding cluster assignment than variables with a small scale. 
-To address this problem, we typically standardize our data before clustering,
+To address this problem, we typically standardize \index{standardization!K-means}\index{K-means!stanardization} our data before clustering,
 which ensures that each variable has a mean of 0 and standard deviation of 1.
 The `scale` function in R can be used to do this. 
 We show an example of how to use this function 
@@ -474,11 +476,13 @@ scaled_data
 
 ## K-means in R
 
-To perform K-means clustering in R, we use the `kmeans` function. It takes at
+To perform K-means clustering in R, we use the `kmeans` function. \index{K-means!kmeans function} It takes at
 least two arguments: the data frame containing the data you wish to cluster,
 and K, the number of clusters (here we choose K = 3). Note that since the K-means
 algorithm uses a random initialization of assignments, we need to set the random
 seed to make the clustering reproducible.
+\index{seed!set.seed}
+\index{random seed|see{seed}}
 
 ```{r 10-kmeans}
 set.seed(1234)
@@ -489,9 +493,9 @@ penguin_clust
 As you can see above, the clustering object returned by `kmeans` has a lot of information
 that can be used to visualize the clusters, pick K, and evaluate the total WSSD.
 To obtain this information in a tidy format, we will call in help 
-from the `broom` package. Let's start by visualizing the clustering
+from the `broom` package. \index{broom} Let's start by visualizing the clustering
 as a coloured scatter plot. To do that
-we use the `augment` function, which takes in the model and the original data
+we use the `augment` function, \index{K-means!augment} \index{augment} which takes in the model and the original data
 frame, and returns a data frame with the data and the cluster assignments for
 each point:
 
@@ -515,7 +519,7 @@ cluster_plot
 
 As mentioned above, we also need to select K by finding
 where the "elbow" occurs in the plot of total WSSD versus the number of clusters. 
-We can obtain the total WSSD (`tot.withinss`) from our
+We can obtain the total WSSD (`tot.withinss`) \index{WSSD!total} from our
 clustering using `broom`'s `glance` function. For example:
 
 ```{r 10-glance}
@@ -531,7 +535,7 @@ penguin_clust_ks <- tibble(k = 1:9)
 penguin_clust_ks
 ```
 
-Then we use `map` to apply the `kmeans` function to each
+Then we use `map` \index{map} to apply the `kmeans` function to each
 K. However, we need to use `map` a little bit differently than we have
 before. This is because we need to iterate over `k`, which is the *second argument* 
 to the `kmeans` function. In the past, we have used `map` only to iterate over values of the
@@ -539,7 +543,7 @@ to the `kmeans` function. In the past, we have used `map` only to iterate over v
 write `map(data_frame, function_name)`. This won't work here; we need to 
 provide our data frame as the first argument to the `kmeans` function.
 
-The solution is to create something called an *anonymous function*. 
+The solution is to create something called an *anonymous function*. \index{function!anonymous}
 An anonymous function is a function that has no name,
 unlike other functions you've seen so far (`kmeans`, `select`, etc). 
 To do this we will write our map statement like this:
@@ -557,6 +561,7 @@ like we did before! The rest of the call above does just that -- it passes each 
 Below, we execute this `map` call inside of a `mutate` call on the 
 `penguin_clust_ks` data frame and get a list column that contains a K-means
 clustering object for each value of K we had:
+\index{mutate}
 
 ```{r 10-choose-k-part2}
 penguin_clust_ks <- tibble(k = 1:9) |>
@@ -564,7 +569,7 @@ penguin_clust_ks <- tibble(k = 1:9) |>
 penguin_clust_ks
 ```
 
-Next, we use `map` again to apply `glance` to each of the K-means
+Next, we use `map` again to apply `glance` \index{glance} to each of the K-means
 clustering objects to get the clustering statistics (including WSSD). The output
 of glance is a data frame, and so we get another list column. This results in a 
 complex data frame with 3 columns, one for K, one for the 
@@ -608,7 +613,7 @@ It looks like 3 clusters is the right choice for this data.
 But why is there a "bump" in the total WSSD plot here? Shouldn't total WSSD always
 decrease as we add more clusters? Technically yes, but remember:  K-means can 
 get "stuck" in a bad solution. Unfortunately, for K = 8 we had an unlucky initialization
-and found a bad clustering! We can help prevent finding a bad clustering by trying a 
+and found a bad clustering! \index{K-means!restart,nstart} We can help prevent finding a bad clustering by trying a 
 few different random initializations via the `nstart` argument (here we use 10 restarts). 
 
 ```{r 10-choose-k-nstart, fig.height = 4, fig.width = 4.35, message= F, warning = F}
