--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -25,6 +25,7 @@ At the end of the previous chapter, we noted some limitations of KNN regression.
 While the method is simple and easy to understand, KNN regression does not
 predict well beyond the range of the predictors in the training data, and
 the method gets significantly slower as the training dataset grows.
+\index{regression!linear}
 Fortunately, there is an alternative to KNN regression---*linear regression*---that addresses
 both of these limitations. Linear regression is also much more commonly used in practice, especially
 in scientific applications, because it provides an interpretable mathematical equation that describes
@@ -48,14 +49,14 @@ straight line of best fit through the training data and then
 > similar to that of linear regression and KNN
 > regression. It is useful to have a good understanding of linear regression before learning about
 > logistic regression. After reading this chapter, see the "Additional Resources" section at the end of the
-> classification chapters to learn more about logistic regression.
+> classification chapters to learn more about logistic regression. \index{regression!logistic}
 
-Let's return to the Sacramento housing data from the previous chapter to learn
+Let's return to the Sacramento housing data \index{Sacramento real estate} from the previous chapter to learn
 how to apply linear regression and compare it to KNN regression. For now, we
 will consider 
 a smaller version of the housing data to help make our visualizations clear.
 Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
-its sale price? In particular, recall that we have come across a new 2,000-square foot house we are interested
+its sale price? \index{question!regression} In particular, recall that we have come across a new 2,000-square foot house we are interested
 in purchasing with an advertised list price of
 \$350,000. Should we offer the list price, or is that over/undervalued?
 To answer this question using simple linear regression, we use the data we have
@@ -84,7 +85,7 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
 small_plot
 ```
 
-The equation for the straight line is: 
+The equation for the straight line is: \index{straight line!equation}
 
 $$\text{house sale price} = \beta_0 + \beta_1 \cdot (\text{house size}),$$
 where
@@ -143,6 +144,7 @@ each of the observed data points in the training data. Figure \@ref(fig:08-verti
 these vertical distances as red lines. Finally, to assess the predictive 
 accuracy of a simple linear regression model,
 we use RMSPE&mdash;the same measure of predictive performance we used with KNN regression.
+\index{RMSPE}
 
 ```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of sale price versus size with red lines denoting the vertical distances between the predicted values and the observed data points"}
 small_sacramento <- small_sacramento |>
