fixed y axis plot labels in inference

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -273,6 +273,7 @@ sampling distribution directly for learning purposes.
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", fig.retina = 2, out.width = "70%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
+  ylab("Count") +
   xlab("Sample proportions")
 sampling_distribution
 ```
@@ -316,6 +317,7 @@ options(pillar.sigfig = 5)
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Population distribution of price per night ($) for all Airbnb listings in Vancouver, Canada", fig.retina = 2, out.width = "70%"}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") + 
   xlab("Price per night ($)")
 population_distribution
 ```
@@ -355,6 +357,7 @@ of our sample.
 ```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", fig.retina = 2, out.width = "70%"}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") + 
   xlab("Price per night ($)")
 sample_distribution
 estimates <- one_sample |>
@@ -397,6 +400,7 @@ sample_estimates
 
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") + 
   xlab("Sample mean price per night ($)")
 sampling_distribution_40
 ```
@@ -476,12 +480,14 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
 ## Sampling distribution n = 20
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night($)") +
   ggtitle("n = 20") 
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night($)") +
   ggtitle("n = 50") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
@@ -489,6 +495,7 @@ sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
 ## Sampling distribution n = 100
 sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night ($)") +
   ggtitle("n = 100") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
@@ -496,6 +503,7 @@ sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) 
 ## Sampling distribution n = 500
 sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night ($)") +
   ggtitle("n = 500") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
@@ -620,6 +628,7 @@ sample_10 <- airbnb |>
 sample_distribution_10 <- ggplot(sample_10, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   ggtitle("n = 10")
 
 sample_20 <- airbnb |>
@@ -627,18 +636,21 @@ sample_20 <- airbnb |>
 sample_distribution_20 <- ggplot(sample_20, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   ggtitle("n = 20")
 sample_50 <- airbnb |>
   rep_sample_n(50)
 sample_distribution_50 <- ggplot(sample_50, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   ggtitle("n = 50")
 sample_100 <- airbnb |>
   rep_sample_n(100)
 sample_distribution_100 <- ggplot(sample_100, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   ggtitle("n = 100")
 
 sample_200 <- airbnb |>
@@ -646,6 +658,7 @@ sample_200 <- airbnb |>
 sample_distribution_200 <- ggplot(sample_200, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   ggtitle("n = 200")
 
 grid.arrange(sample_distribution_10 + xlim(min(airbnb$price), 600),
@@ -709,6 +722,7 @@ one_sample <- one_sample |>
 one_sample
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") + 
   xlab("Price per night ($)")
 one_sample_dist
 ```
@@ -733,6 +747,7 @@ boot1 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 boot1_dist <- ggplot(boot1, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") + 
   xlab("Price per night ($)")
 
 boot1_dist
@@ -770,6 +785,7 @@ six_bootstrap_samples <- boot20000 |>
 ggplot(six_bootstrap_samples, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)") +
+  ylab("Count") + 
   facet_wrap(~replicate)
 ```
 
@@ -797,6 +813,7 @@ boot20000_means
 tail(boot20000_means)
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night ($)") 
 boot_est_dist
 ```
@@ -813,6 +830,7 @@ sample_estimates <- samples |>
 
 sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  ylab("Count") +
   xlab("Sample mean price per night ($)")  
 
 
