fixed appendix title

--- a/appendixA.Rmd
+++ b/appendixA.Rmd
@@ -1,6 +1,6 @@
 # (APPENDIX) Appendix {-}
 
-# Download files from a JupyterHub for later local use {#appendixA}
+# Downloading files from JupyterHub {#appendixA}
 
 This section will help you
 save your work from a JupyterHub web-based platform to your own computer. 
